fixed responsiveness of resume on mobile

--- a/cv.css
+++ b/cv.css
@@ -23,7 +23,7 @@ body {
       font-size: 40%; } }
   @media only screen and (max-width: 480px) and (min-width: 0) {
     body {
-      font-size: 20%; } }
+      font-size: 10%; } }
 
 .container {
   background-color: white;
