--- a/scss/custom/_cv.scss
+++ b/scss/custom/_cv.scss
@@ -51,7 +51,7 @@ body{
 	}
 
 	@include media-query-horizontal($screen-xs, 0){
-		font-size: 20%;
+		font-size: 10%;
 	}
 }
 
